--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "dependencies": {},
-  "devDependencies": {
-    "@types/node": "^24.3.0"
-  }
+    "type": "module",
+    "dependencies": {},
+    "devDependencies": {
+        "@types/node": "^24.3.0"
+    }
 }
